fix: Support/Plugins/Makefile_MinGW.master => release target fix

--- a/Support/Plugins/Makefile_MinGW.master
+++ b/Support/Plugins/Makefile_MinGW.master
@@ -77,5 +77,5 @@ clean :
 	DEL /Q $(SUPPORTOBJECTS) $(OBJECTPATH)\ $(PATHTOROOT)\Library\\$(OBJECTPATH) 
 
 release :
-	make DEBUGFLAG=-O3
+	$(MAKE) -f $(firstword $(MAKEFILE_LIST)) CONFIG=release
 
